--- a/index.html
+++ b/index.html
@@ -60,31 +60,217 @@
 		</div>
 	</div>
 </div>
-<!--- Welcome Section -->
-<div class = "container-fluid-padding">
-	<div class = "row welcome text-center">
-		<div class = "col-12">
-			<h4>
-				Built with HTML5, CSS3, and Bootstrap 4
-			</h4>
+<!-- Introduction -->
+<div class = "container-fluid">
+	<div class = "row padding">
+		<div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6 offset-lg-3">
+			<h1>Hello!</h1>
+			<p class = "intro">
+				I'm Brian Nguyen. I enjoy learning about machine learning, working out, and listening to EDM.
+				I'm currently a sophomore at the University of Texas at Dallas pursuing a B.S. in CS.
+				Feel free to check out my <a href =  "resume.pdf"> <span class = "colored">resume!</span></a>
+			</p>
+		</div>
+		<div class = "col-xs-12 col-sm-8 col-md-6 col-lg 12">
+			<div class = "img-fluid">
+				<img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:65%">
+			</div>
 		</div>
 	</div>
 </div>
 
-<!--- Three Column Section -->
-<div class = "container-fluid-padding">
+<!-- Projects -->
+<div class = "container-fluid padding">
 	<div class = "row text-center padding">
-		<div class = "col-xs-12 col-sm-4 col-md-4">
-			<i class = "fab fa-html5"></i>
-			<h3>HTML5</h3>
+		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
+			<a href = "#modal1" class = "modal-link" data-toggle = "modal"> <i class = "fab fa-twitter"></i></a>
+			<h3>ArcAngel</h3>
+			<p class = "text-muted">
+				Hackathon Project
+			</p>
 		</div>
-		<div class = "col-xs-12 col-sm-4 col-md-4">
-			<i class = "fab fa-css3"></i>
-			<h3>CSS3</h3>
+		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
+			<a href = "#modal2" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-sign-language"></i></a>
+			<h3>C-ASL</h3>
+			<p class = "text-muted">
+				ACM Project
+			</p>
 		</div>
-		<div class = "col-xs-12 col-sm-4 col-md-4">
-			<i class = "fas fa-bold"></i>
-			<h3>BOOTSTRAP 4</h3>
+		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
+			<a href = "#modal3" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-user-md"></i></a>
+			<h3>Breast Cancer Diagnosis</h3>
+			<p class = "text-muted">
+				Research Project
+			</p>
+		</div>
+		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
+			<a href = "#modal4" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-lightbulb"></i></a>
+			<h3>App4ThT</h3>
+			<p class = "text-muted">
+				Hackathon Project
+			</p>
+		</div>
+		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
+			<a href = "#modal5" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-rocket"></i></a>
+			<h3>Ginger Rail</h3>
+			<p class = "text-muted">
+				Hackathon Project
+			</p>
+		</div>
+	</div>
+</div>
+<!--Modals-->
+<!-- ArcAngel-->
+<div class = "modal fade" id = "modal1">
+	<div class = "modal-dialog">
+		<div class = "modal-content">
+			<!-- Modal header-->
+			<div class = "modal-header">
+				<h4 class = "model-title">ArcAngel (2018)</h4>
+				<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+			</div>
+			<!-- Modal body-->
+			<div class = "modal-body">
+				<p>
+					Android app that aggregated and mapped curated tweets based on keywords onto a heat map to show location of interest for first-responders.
+					Tweets were collected through a Matlab implementation of the Twitter API.
+					To demonstrate the heat map, tweets were collected live from Texas A&M and shown on the heat map.
+					Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
+				</p>
+				<img class = "modal-img" src = "img/arcangel.gif" alt = "Demonstration of ArcAngel" />
+				<figcaption>
+					Heatmap of tweets at Texas A&M
+				</figcaption>
+			</div>
+			<!--Modal footer -->
+			<div class = "modal-footer">
+				<a href = "https://github.com/ledet20/arcangel" class = "btn btn-info" role = "button">GitHub</a>
+				<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- C-ASL-->
+<div class = "modal fade" id = "modal2">
+	<div class = "modal-dialog">
+		<div class = "modal-content">
+			<!-- Modal header-->
+			<div class = "modal-header">
+				<h4 class = "model-title">C-ASL (2018)</h4>
+				<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+			</div>
+			<!-- Modal body-->
+			<div class = "modal-body">
+				<p>
+					Utilized a convolutional neural network (CNN) and mean-shift to classify the ASL alphabet except for J and Z.
+					Mean-shift tracks the hand with a bounding box by passing an initial calibration image.
+					Through the bounding box, a cropped image of the hand is obtained.
+					The cropped hand is then sent to the CNN which was trained on hand images.
+					The CNN then outputs the most likely letter.
+					Developed with Python, Keras, and OpenCV.
+					Developed for ACM Projects and won second place.
+				</p>
+				<img class = "modal-img" src = "img/hand.gif" alt = "Demonstration of ASL Project"/>
+				<figcaption>
+					Classification of ASL alphabet
+				</figcaption>
+			</div>
+			<!--Modal footer -->
+			<div class = "modal-footer">
+				<a href = "https://github.com/Abhishaike/ASL_Translation" class = "btn btn-info" role = "button">GitHub</a>
+				<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!--Breast cancer diagnosis-->
+<div class = "modal fade" id = "modal3">
+	<div class = "modal-dialog">
+		<div class = "modal-content">
+			<!-- Modal header-->
+			<div class = "modal-header">
+				<h4 class = "model-title">Breast Cancer Diagnosis (2016)</h4>
+				<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+			</div>
+			<!-- Modal body-->
+			<div class = "modal-body">
+				<p>
+					Used an ensemble of shallow neural networks to classify whether a tumor is benign or malignant.
+					Used statistical methods such as non-parametric bootstrapping to improve model perfomance.
+					Used performance measures such as Aikake information criterion (AIC) and area under curve (AUC) to assess model performance.
+					Used principal components analysis (PCA) and T-distributed stochastic neighbor embedding (T-SNE) to visualize the data.
+					Data collected from University of Wisconsin. Developed with Matlab. Project conducted at University of Texas at Dallas.
+					Submitted paper to Siemens Competition and won Semifinalist, top 300 research project in the nation.
+				</p>
+				<img class = "modal-img" src = "img/poster.jpg" alt = "Science Fair poster"/>
+				<figcaption>
+					Science Fair Poster
+				</figcaption>
+			</div>
+			<!--Modal footer -->
+			<div class = "modal-footer">
+				<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research" class = "btn btn-info" role = "button">GitHub</a>
+				<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!--App4ThT-->
+<div class = "modal fade" id = "modal4">
+	<div class = "modal-dialog">
+		<div class = "modal-content">
+			<!-- Modal header-->
+			<div class = "modal-header">
+				<h4 class = "model-title">App4ThT (2016)</h4>
+				<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+			</div>
+			<!-- Modal body-->
+			<div class = "modal-body">
+				<p>
+					Website platform proof of concept for the crowdsourcing of project ideas. Ideators post their project ideas on the website,
+					and developers are able to look at these project ideas and contribute to them.
+					Developed with HTML, CSS, and JavaScript. Project created at IncubateX DFW and won Best of Solera.
+				</p>
+				<img class = "modal-img" src = "img/app4tht.png" alt = "Demonstration of App4Tht" />
+				<figcaption>
+					Home screen
+				</figcaption>
+			</div>
+			<!--Modal footer -->
+			<div class = "modal-footer">
+				<a href = "https://github.com/pyrito/app4tht" class = "btn btn-info" role = "button">GitHub</a>
+				<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!--Ginger Rail-->
+<div class = "modal fade" id = "modal5">
+	<div class = "modal-dialog">
+		<div class = "modal-content">
+			<!-- Modal header-->
+			<div class = "modal-header">
+				<h4 class = "model-title">Ginger Rail (2016)</h4>
+				<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+			</div>
+			<!-- Modal body-->
+			<div class = "modal-body">
+				<p>
+					Used an Arduino, servos, and a 2 L soda bottle to make a bottle rocket launcher. The servos enabled the launcher to move based on joystick commands.
+					The Arduino controlled an mechanism that had a metal pin for launching the rocket launcher. When a launch command is activated by the controls, the pin punctures
+					the cap of the bottle is punctured, and the bottle is launched. Project was a proof of concept of teaching computer science principles through low-cost materials.
+					Arduino Project created at HackDFW.
+				</p>
+				<img class = "modal-img" src = "img/rocket.gif" alt = "Demonstration of GingerRail Project"/>
+				<figcaption>
+					Demonstration of GingerRail
+				</figcaption>
+			</div>
+			<!--Modal footer -->
+			<div class = "modal-footer">
+				<a href = "https://devpost.com/software/ginger-rail" class = "btn btn-info" role = "button">Devpost</a>
+				<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+			</div>
 		</div>
 	</div>
 </div>
